Finished removing all br tags

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -167,16 +167,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
-									label: "Sapphire Large Primary",
-									width: "100%",
+									label: "271px Sapphire Large Primary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
-									label: "50% Primary",
-									width: "50%",
+									label: "136px Primary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -185,16 +185,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
-									label: "Reversed Sapphire Large Primary",
-									width: "100%",
+									label: "271px Reversed Sapphire Large Primary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
-									label: "50% Primary",
-									width: "50%",
+									label: "136px Primary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -203,16 +203,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
-									label: "Sapphire Large Secondary",
-									width: "100%",
+									label: "271px Sapphire Large Secondary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -221,16 +221,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
-									label: "Reversed Sapphire Large Secondary",
-									width: "100%",
+									label: "271px Reversed Saph Lg Secondary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -240,16 +240,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
-									label: "Sapphire Small Primary",
-									width: "100%",
+									label: "271px Sapphire Small Primary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
-									label: "50% Small",
-									width: "50%",
+									label: "136px Small",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
@@ -258,16 +258,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
-									label: "Reversed Sapphire Small Primary",
-									width: "100%",
+									label: "271px Reversed Sapphire Small Primary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 							
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
-									label: "50% Small",
-									width: "50%",
+									label: "136px Small",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
@@ -276,16 +276,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
-									label: "Sapphire Small Secondary",
-									width: "100%",
+									label: "271px Sapphire Small Secondary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
@@ -294,16 +294,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
-									label: "Reversed Sapphire Small Secondary",
-									width: "100%",
+									label: "271px Reversed Saph Sm Secondary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
@@ -313,16 +313,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
-									label: "Onyx Large Primary",
-									width: "100%",
+									label: "271px Onyx Large Primary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
-									label: "50% Primary",
-									width: "50%",
+									label: "136px Primary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -331,16 +331,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
-									label: "Reversed Onyx Large Primary",
-									width: "100%",
+									label: "271px Reversed Onyx Large Primary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
-									label: "50% Primary",
-									width: "50%",
+									label: "136px Primary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -349,16 +349,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
-									label: "Onyx Large Secondary",
-									width: "100%",
+									label: "271px Onyx Large Secondary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -367,16 +367,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
-									label: "Reversed Onyx Large Secondary",
-									width: "100%",
+									label: "271px Reversed Onyx Large Secondary",
+									width: "271px",
 									variant: ""
 								})
 							</td>
 
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: ""
 								})
 							</td>
@@ -386,16 +386,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
-									label: "Onyx Small Primary",
-									width: "100%",
+									label: "271px Onyx Small Primary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
-									label: "50% Small",
-									width: "50%",
+									label: "136px Small",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
@@ -404,16 +404,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
-									label: "Reversed Onyx Small Primary",
-									width: "100%",
+									label: "271px Reversed Onyx Small Primary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
-									label: "50% Small",
-									width: "50%",
+									label: "136px Small",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
@@ -422,16 +422,16 @@
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
-									label: "Onyx Small Secondary",
-									width: "100%",
+									label: "271px Onyx Small Secondary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 
 							<td>
 								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
@@ -440,16 +440,16 @@
 						<tr>
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
-									label: "Reversed Onyx Small Secondary",
-									width: "100%",
+									label: "271px Reversed Onyx Small Secondary",
+									width: "271px",
 									variant: "small"
 								})
 							</td>
 
 							<td class="dark">
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
-									label: "50% Secondary",
-									width: "50%",
+									label: "136px Secondary",
+									width: "136px",
 									variant: "small"
 								})
 							</td>
