--- a/src/components/eyebrows/eyebrow.html
+++ b/src/components/eyebrows/eyebrow.html
@@ -3,5 +3,6 @@
 -->
 @@include('components/eyebrows/template.html', {
 	variant: "",
-	label: "What's trending"
+	label: "What's trending",
+	classes: ""
 })
