--- a/src/modules/cta-banner/two-column/templates/template.dark.html
+++ b/src/modules/cta-banner/two-column/templates/template.dark.html
@@ -10,13 +10,13 @@
 				<tr>
 					<td class="column" width="404px">
 						@@heading
-						<br>
+						
 						@@paragraph
 					</td>
 					<td class="column">
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Download",
-							width: "100%"
+							width: "98px"
 						})
 					</td>
 				</tr>
