--- a/src/modules/one-column-contents/shift-right/templates/template.html
+++ b/src/modules/one-column-contents/shift-right/templates/template.html
@@ -10,16 +10,16 @@
 				<tr class="">
 					
 					<td class="column shift-right-md">
-						<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
-						<br>
-						<h2 class="sans">One chart you need to see</h2>
-						<br>
-						<p class="paragraph-2">
+						<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+						
+						<h2 class="sans margin-b-16">One chart you need to see</h2>
+						
+						<p class="paragraph-2 margin-b-16">
 							<strong>Is Manufacturing Shifting from China to India?</strong>
 						</p>
-						<br>
-						<p class="paragraph-2">While increased tariffs are causing many companies to navigate away from China and toward India, we believe China will likely remain an important manufacturing destination for the foreseeable future. Operating in the country is indeed becoming more difficult for foreign investors—but it continues to have competitive infrastructure, an effective labor force, and long-standing relationships with foreign companies that would be challenging and costly to replace.</p>
-						<br>
+						
+						<p class="paragraph-2 margin-b-16">While increased tariffs are causing many companies to navigate away from China and toward India, we believe China will likely remain an important manufacturing destination for the foreseeable future. Operating in the country is indeed becoming more difficult for foreign investors—but it continues to have competitive infrastructure, an effective labor force, and long-standing relationships with foreign companies that would be challenging and costly to replace.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
