--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -13,15 +13,15 @@
 						<img src="https://placehold.co/124x124" alt="Bio Image" width="124px">
 					</td>
 					<td class="column">
-						<h3 class="sans">@@name</h3>
-						<br>
-						<h3 class="subheadline">Director, Head of US Offshore and Latin America Distribution</h3>
-						<br>
-						<p style class="link-2">
+						<h3 class="sans margin-b-16">@@name</h3>
+						
+						<h3 class="subheadline margin-b-16">Director, Head of US Offshore and Latin America Distribution</h3>
+						
+						<p style class="link-2 margin-b-16">
 							<a href="tel:@@phone" class="link-2"> Tel: @@phone </a> |
 							<a href="mailto:@@email" class="link-2">@@email</a>
 						</p>
-						<br>
+						
 						<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
 					</td>
 				</tr>
