--- a/src/modules/three-column-contents/three-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/three-thumbnail/templates/template.html
@@ -12,9 +12,8 @@
 					<td class="column">
 						<!-- <img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class=""> -->
 						<img style src="https://placehold.co/124x124" width="124px" alt="Column Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+						
+						<p class="paragraph-3 margin-b-12 margin-t-16">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -24,9 +23,8 @@
 					<td class="column">
 						<!-- <img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class=""> -->
 						<img style src="https://placehold.co/124x124" width="124px" alt="Column Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+						
+						<p class="paragraph-3 margin-b-12 margin-t-16">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -36,9 +34,9 @@
 					<td class="column">
 						<!-- <img style src="@@imgBase/@@imgSrc" width="124" alt="Column Image" class=""> -->
 						<img style src="https://placehold.co/124x124" width="124px" alt="Column Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3 margin-b-12">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+						
+						<p class="paragraph-3 margin-b-12 margin-t-16">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
