--- a/src/modules/two-column-contents/full-content/templates/template.html
+++ b/src/modules/two-column-contents/full-content/templates/template.html
@@ -11,64 +11,63 @@
 					<td class="column">
 						<!-- <img style="" src="@@imgBase/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block"> -->
 						<img style="" src="https://placehold.co/264x148" alt="First Column Feature image" width="263" border="0" class="d-block">
-						<p></p>
-						<br>
+						
 						<!--
 							Component: Eyebrow
 						-->
 						@@include('components/eyebrows/template.html', {
 							variant: "",
-							label: "What's trending"
+							label: "What's trending",
+							classes: "margin-b-16 margin-t-16"
 						})
-						<br>
-						<h4>Do rising US Interest rates offer opportunities in EM?</h4>
-						<br>
-						<h3 class="subheadline">Tuesday, October 31, 1:00PM eT</h3>
-						<br>
-						<p style="width: 193px;" class="d-block paragraph-2">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
-						<br>
+						
+						<h4 class="margin-b-16 margin-t-16">Do rising US Interest rates offer opportunities in EM?</h4>
+						
+						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
+						
+						<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
 
-						<div class="mso_list">
+						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
-						<br>
+						
 
-						<h3 class="subheadline">Australia</h3>
-						<br>
+						<h3 class="subheadline margin-b-16">Australia</h3>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 
-						<h3 class="subheadline">Australia</h3>
-						<br>
+						<h3 class="subheadline margin-b-16">Australia</h3>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 
-						<h3 class="subheadline">Australia</h3>
-						<br>
+						<h3 class="subheadline margin-b-16">Australia</h3>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 
 						@@include("components/buttons/text/template.html", {
 							variant: "",
@@ -79,64 +78,63 @@
 					<td class="column">
 						<!-- <img style="" src="@@imgBase/LAM_ContentImage_Station.png" alt="Second Column Feature image" width="263" border="0" class="d-block"> -->
 						<img style="" src="https://placehold.co/264x148" alt="Second Column Feature image" width="263" border="0" class="d-block">
-						<p></p>
-						<br>
+						
 						<!--
 							Component: Eyebrow
 						-->
 						@@include('components/eyebrows/template.html', {
 							variant: "",
-							label: "What's trending"
+							label: "What's trending",
+							classes: "margin-b-16 margin-t-16"
 						})
-						<br>
-						<h4>Do rising US Interest rates offer opportunities in EM?</h4>
-						<br>
-						<h3 class="subheadline">Tuesday, October 31, 1:00PM eT</h3>
-						<br>
-						<p style="width: 193px;" class="d-block paragraph-2">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
-						<br>
+						
+						<h4 class="margin-b-16 margin-t-16">Do rising US Interest rates offer opportunities in EM?</h4>
+						
+						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
+						
+						<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
 
-						<div class="mso_list">
+						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Lazard US Offshore Fund Offerings</a></li>
 							</ul>
 						</div>
-						<br>
+						
 
-						<h3 class="subheadline">Australia</h3>
-						<br>
+						<h3 class="subheadline margin-b-16">Australia</h3>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 
-						<h3 class="subheadline">Australia</h3>
-						<br>
+						<h3 class="subheadline margin-b-16">Australia</h3>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 
-						<h3 class="subheadline">Australia</h3>
-						<br>
+						<h3 class="subheadline margin-b-16">Australia</h3>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 
 						@@include("components/buttons/text/template.html", {
 							variant: "",
