--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -13,17 +13,17 @@
 						<img src="https://placehold.co/194x194" alt="Strategy thumbnail" width="194px" height="194px" class="d-block">
 					</td>
 					<td style="vertical-align: middle; width: 194px;" class="column" align="left">
-						<p class="paragraph-3">
+						<p class="paragraph-3 margin-b-16">
 							Investors can now access Lazard's flagship Global Listed Infrastructure Fund as an exchange traded fund (ETF), using the ticker 'GIFL'.
 						</p>
-						<br>
+						
 						<p>
 							Explore the Lazard Global Listed
 						</p>
-						<p>
+						<p class="margin-b-16">
 							Infrastructure Active ETF page today
 						</p>
-						<br>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
