--- a/src/modules/two-column-contents/teams/templates/template.html
+++ b/src/modules/two-column-contents/teams/templates/template.html
@@ -5,49 +5,55 @@
 			<table style="width: 100%;" cellpadding="4px" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
 					<td style="" class="column margin-b-16">
-						<h3 class="subheadline">DCIO Regional Consultants</h3>
-						<br>
-						<p class="paragraph-2">We offer a suite of offshore fund options and investment solutions to address your clients’ needs.</p>
-						<br>
+						<h3 class="subheadline margin-b-16">DCIO Regional Consultants</h3>
+						
+						<p class="paragraph-2 margin-b-16">We offer a suite of offshore fund options and investment solutions to address your clients’ needs.</p>
+						
 						@@include( "components/team-bios/template.html", {
 							imgSrc: "LAM_Bio_1.png",
 							name: "First, Last Name",
-							email: "Eduardo.Mora@lazard.com"
+							email: "Eduardo.Mora@lazard.com",
+							classes: "margin-b-16"
 						} )
-						<br>
+						
 						@@include( "components/team-bios/template.html", {
 							imgSrc: "LAM_Bio_1.png",
 							name: "First, Last Name",
-							email: "Eduardo.Mora@lazard.com"
+							email: "Eduardo.Mora@lazard.com",
+							classes: "margin-b-16"
 						} )
-						<br>
+						
 						@@include( "components/team-bios/template.html", {
 							imgSrc: "LAM_Bio_1.png",
 							name: "First, Last Name",
-							email: "Eduardo.Mora@lazard.com"
+							email: "Eduardo.Mora@lazard.com",
+							classes: "margin-b-16"
 						} )
 					</td>
 					<td class="column">
-						<h3 class="subheadline">DCIO Regional Consultants</h3>
-						<br>
-						<p class="paragraph-2">We offer a suite of offshore fund options and investment solutions to address your clients’ needs.</p>
-						<br>
+						<h3 class="subheadline margin-b-16">DCIO Regional Consultants</h3>
+						
+						<p class="paragraph-2 margin-b-16">We offer a suite of offshore fund options and investment solutions to address your clients’ needs.</p>
+						
 						@@include( "components/team-bios/template.html", {
 							imgSrc: "LAM_Bio_1.png",
 							name: "First, Last Name",
-							email: "Eduardo.Mora@lazard.com"
+							email: "Eduardo.Mora@lazard.com",
+							classes: "margin-b-16"
 						} )
-						<br>
+						
 						@@include( "components/team-bios/template.html", {
 							imgSrc: "LAM_Bio_1.png",
 							name: "First, Last Name",
-							email: "Eduardo.Mora@lazard.com"
+							email: "Eduardo.Mora@lazard.com",
+							classes: "margin-b-16"
 						} )
-						<br>
+						
 						@@include( "components/team-bios/template.html", {
 							imgSrc: "LAM_Bio_1.png",
 							name: "First, Last Name",
-							email: "Eduardo.Mora@lazard.com"
+							email: "Eduardo.Mora@lazard.com",
+							classes: "margin-b-16"
 						} )
 					</td>
 				</tr>
