--- a/src/components/team-bios/template.html
+++ b/src/components/team-bios/template.html
@@ -1,4 +1,4 @@
-<table role="presentation" cellpadding="0" cellspacing="0" class="">
+<table role="presentation" cellpadding="0" cellspacing="0" class="@@classes">
 	<tr>
 		<td rowspan="2" style="vertical-align: middle;" class="padding-r-16">
 			<img src="https://placehold.co/54x54" alt="Team member bio thumbnail" width="54px" height="54px">
