--- a/src/modules/four-column-contents/templates/template.html
+++ b/src/modules/four-column-contents/templates/template.html
@@ -6,40 +6,35 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<h4 class="center">Subscribe to Our Flagship Insights</h4>
-			<br>
+			<h4 class="center margin-b-16">Subscribe to Our Flagship Insights</h4>
+			
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_four-column">
 					<td style="" class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" width="124" alt="First Column Image"> -->
-						 <img src="https://placehold.co/124x124" width="124" alt="First Column Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3 margin-b-8 sapphire">US Outlook</p>
+						<img src="https://placehold.co/124x124" width="124" alt="First Column Image">
+						<p class="paragraph-3 margin-b-8 margin-t-16 sapphire">US Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" width="124" alt="Second Column Image"> -->
-						 <img src="https://placehold.co/124x124" width="124" alt="Second Column Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3 margin-b-8 sapphire">Japan Outlook</p>
+						<img src="https://placehold.co/124x124" width="124" alt="Second Column Image">
+						
+						<p class="paragraph-3 margin-b-8 margin-t-16 sapphire">Japan Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" width="124" alt="Third Column Image"> -->
-						 <img src="https://placehold.co/124x124" width="124" alt="Third Column Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3 margin-b-8 sapphire">UK Outlook</p>
+						<img src="https://placehold.co/124x124" width="124" alt="Third Column Image">
+						
+						<p class="paragraph-3 margin-b-8 margin-t-16 sapphire">UK Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" width="124" alt="Fourth Column Image"> -->
-						 <img src="https://placehold.co/124x124" width="124" alt="Fourth Column Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3 margin-b-8 sapphire">EM Outlook</p>
+						<img src="https://placehold.co/124x124" width="124" alt="Fourth Column Image">
+						
+						<p class="paragraph-3 margin-b-8 margin-t-16 sapphire">EM Outlook</p>
 						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
 					</td>
 				</tr>
