--- a/src/modules/one-column-contents/basic/templates/template.dark.html
+++ b/src/modules/one-column-contents/basic/templates/template.dark.html
@@ -9,24 +9,23 @@
 			<!--
 				Component: Eyebrow
 			-->
-			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
-			<br>
-			<h3 class="sans">Do Rising US Interest Rates Offer Opportunities in EM?</h3>
-			<br>
-			<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
-			<br>
+			<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+			
+			<h3 class="sans margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h3>
+			
+			<h2 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h2>
+			
 			<!-- <img style src="@@imgBase/@@imgSrc" alt="1Y Grades Chart" class="mw-100" /> -->
 			<img src="https://placehold.co/543x304" alt="Feature Image" width="543" height="auto"  />
-			<p></p> <!-- Spacer <p> for MSO image margin -->
-			<br>
-			<p class="disclaimer">As of 26 October 2023</p>
-			<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
-			<p class="disclaimer">Source: Lazard, JP Morgan</p>
-			<br>
-			<p class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
-			<br>
 			
-			<div class="mso_list">
+			<p class="disclaimer margin-t-16">As of 26 October 2023</p>
+			<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
+			<p class="disclaimer margin-b-16">Source: Lazard, JP Morgan</p>
+			
+			<p class="paragraph-2 margin-b-16">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
+			
+			
+			<div class="mso_list margin-b-16">
 				<ul class="g_list" style="" align="left" type="disc">
 						<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Emerging Markets</a></li>
 						<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Europe</a></li>
@@ -34,7 +33,7 @@
 						<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on the United Kingdom</a></li>
 				</ul>
 			</div>
-			<br>
+			
 
 			<!--
 				Component: Button
