--- a/src/modules/tables/numbered/templates/template.html
+++ b/src/modules/tables/numbered/templates/template.html
@@ -6,12 +6,12 @@
 	<tr class="bordered">
 		<td class="frame"></td>
 		<td class="content">
-			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
-			<br>
-			<h4 class="sans">Top 3 highlights from May 2024.</h4>
-			<br>
-			<p class="paragraph-3">Top 3 highlights from May 2024.</p>
-			<br>
+			<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+			
+			<h4 class="sans margin-b-16">Top 3 highlights from May 2024.</h4>
+			
+			<p class="paragraph-3 margin-b-16">Top 3 highlights from May 2024.</p>
+			
 			<table style="" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 				<tr class="bordered">
 					<td class="table-number">
@@ -68,9 +68,9 @@
 					<td></td>
 				</tr>
 			</table>
-			<br>
-			<p><a style target="_blank" href="https://www.lazard.com" class="btn text">See all highlights &nbsp; <span class="arrow">&#8594;</span></a></p>
-			<br>
+			
+			<p class="margin-b-16 margin-t-16"><a style target="_blank" href="https://www.lazard.com" class="btn text">See all highlights &nbsp; <span class="arrow">&#8594;</span></a></p>
+			
 			<p>Lazard Equity Advantage Team</p>
 			<a class="paragraph" href="mailto:EquityAdvantage@lazard.com">EquityAdvantage@lazard.com</a>
 		</td>
