--- a/src/modules/tables/thumbnail/templates/template.html
+++ b/src/modules/tables/thumbnail/templates/template.html
@@ -6,12 +6,12 @@
 	<tr class="bordered">
 		<td class="frame"></td>
 		<td class="content">
-			<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
-			<br>
-			<h4 class="sans">Top 3 highlights from May 2024.</h4>
-			<br>
-			<p class="paragraph-3">Top 3 highlights from May 2024.</p>
-			<br>
+			<p class="eyebrow margin-b-16"><span class="bullet">&bull;</span> <span class="label">What's Trending</span></p>
+			
+			<h4 class="sans margin-b-16">Top 3 highlights from May 2024.</h4>
+			
+			<p class="paragraph-3 margin-b-16">Top 3 highlights from May 2024.</p>
+			
 			<table style="" width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 				<tr class="bordered">
 					<td class="table-thumbnail" align="right">
@@ -19,10 +19,10 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-						<br>
-						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-						<br>
+						<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+						
+						<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -36,10 +36,10 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-						<br>
-						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-						<br>
+						<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+						
+						<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -53,10 +53,10 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-						<br>
-						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-						<br>
+						<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+						
+						<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -70,10 +70,10 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-						<br>
-						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-						<br>
+						<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+						
+						<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -87,10 +87,10 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-						<br>
-						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-						<br>
+						<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+						
+						<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -104,10 +104,10 @@
 						<img src="https://placehold.co/54x74" alt="Table Thumbnail" width="54px" height="74px">
 					</td>
 					<td>
-						<h4 class="sans" style="width: 165px;">Annual Sustainable Investment Report</h4>
-						<br>
-						<p>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
-						<br>
+						<h4 class="sans margin-b-16" style="width: 165px;">Annual Sustainable Investment Report</h4>
+						
+						<p class="margin-b-16">Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
