--- a/src/modules/three-column-contents/content/templates/template.dark.html
+++ b/src/modules/three-column-contents/content/templates/template.dark.html
@@ -9,45 +9,45 @@
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_three-column">
 					<td style="width: 123px;" class="column">
-						<h3>What's trending</h3>
-						<br>
+						<h3 class="margin-b-16">What's trending</h3>
+						
 						<p class="paragraph-2">The latest market commentary from our thought leaders.</p>
 					</td>
 					<td class="column">
-						<h4>In praise of small language models</h4>
-						<br>
-						<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>
-						<br>
+						<h4 class="margin-b-16">In praise of small language models</h4>
+						
+						<p class="paragraph-2 margin-b-16">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px",
+							width: "98px",
 							variant: "small"
 						})
 					</td>
 					<td class="column">
-						<h4>In praise of small language models</h4>
-						<br>
-						<p class="paragraph-2">Large language models (LLMs) are progressing at breakneck speed, captivating investors and sweeping through markets. However, their tendency to hallucinate and their inherent opacity limit their utility for investment decisions. Small language models (SLMs), in contrast, offer reliability and interpretability. These qualities make SLMs especially well-suited for answering highly specific questions, as this paper demonstrates using a case study on China's housing market slowdown.</p>
-						<br>
+						<h4 class="margin-b-16">In praise of small language models</h4>
+						
+						<p class="paragraph-2 margin-b-16">Large language models (LLMs) are progressing at breakneck speed, captivating investors and sweeping through markets. However, their tendency to hallucinate and their inherent opacity limit their utility for investment decisions. Small language models (SLMs), in contrast, offer reliability and interpretability. These qualities make SLMs especially well-suited for answering highly specific questions, as this paper demonstrates using a case study on China's housing market slowdown.</p>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include( "components/buttons/open-in-new/template.dark.html", { label: "Select Australian Equity", disclaimer: "APIR LAZ0022AU" } )
-						<br>
+						
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px",
+							width: "98px",
 							variant: "small"
 						})
 					</td>
