--- a/src/modules/three-column-contents/large-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/large-thumbnail/templates/template.html
@@ -11,10 +11,9 @@
 					<td colspan="2" class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="404px"> -->
 						<img src="https://placehold.co/264x264" alt="GIFL Image" width="264px" height="auto">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
-						<br>
+						
+						<p class="paragraph-3 margin-b-16 margin-t-16">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -24,11 +23,10 @@
 					<!-- <td></td> -->
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124"> -->
-						 <img src="https://placehold.co/124x124" alt="GIFL Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
-						<br>
+						<img src="https://placehold.co/124x124" alt="GIFL Image">
+						
+						<p class="paragraph-3 margin-b-16 margin-t-16">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
@@ -37,11 +35,10 @@
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="GIFL Image" width="124"> -->
-						 <img src="https://placehold.co/124x124" alt="GIFL Image">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="paragraph-3">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
-						<br>
+						<img src="https://placehold.co/124x124" alt="GIFL Image">
+						
+						<p class="paragraph-3 margin-b-16 margin-t-16">And here's another insights report title that you could subscribe to and this time it's even longer still.</p>
+						
 						@@include("components/buttons/text/template.html", {
 							variant: "",
 							href: "https://www.lazardassetmanagement.com",
