--- a/src/modules/thumbnail-grid/templates/template.dark.html
+++ b/src/modules/thumbnail-grid/templates/template.dark.html
@@ -6,41 +6,36 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<h4 class="center">Subscribe to Our Flagship Insights</h4>
-			<br>
+			<h4 class="center margin-b-16">Subscribe to Our Flagship Insights</h4>
+			
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
 					<td style="" class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
-						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<h3>Emerging Markets</h3>
-						<br>
-						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
-						<br>
+						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
+						
+						<h3 class="margin-b-16">Emerging Markets</h3>
+						
+						<p class="caption margin-b-16 margin-t-16">Senior Associate, US Offshore and Latin America Distribution</p>
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px",
+							width: "98px",
 							variant: "small"
 						})
-						<p></p>
-						<br>
+						
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
-						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<h3>Emerging Markets</h3>
-						<br>
-						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
-						<br>
-
+						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
+						
+						<h3 class="margin-b-16">Emerging Markets</h3>
+						
+						<p class="caption margin-b-16">Senior Associate, US Offshore and Latin America Distribution</p>
+						
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px",
+							width: "98px",
 							variant: "small"
 						})
 					</td>
@@ -48,33 +43,29 @@
 				<tr class="layout_two-column">
 					<td style="" class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
-						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<h3>Emerging Markets</h3>
-						<br>
-						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
-						<br>
+						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
+						
+						<h3 class="margin-b-16">Emerging Markets</h3>
+						
+						<p class="caption margin-b-16">Senior Associate, US Offshore and Latin America Distribution</p>
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px",
+							width: "98px",
 							variant: "small"
 						})
 					</td>
 					<td class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
-						 <img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
-						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<h3>Emerging Markets</h3>
-						<br>
-						<p class="caption">Senior Associate, US Offshore and Latin America Distribution</p>
-						<br>
+						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
+						
+						<h3 class="margin-b-16">Emerging Markets</h3>
+						
+						<p class="caption margin-b-16">Senior Associate, US Offshore and Latin America Distribution</p>
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Visit",
-							width: "65px",
+							width: "98px",
 							variant: "small"
 						})
 					</td>
