--- a/src/modules/two-column-contents/title-left/templates/template.html
+++ b/src/modules/two-column-contents/title-left/templates/template.html
@@ -12,20 +12,20 @@
 						<h3 class="">Back on Track?</h3>
 					</td>
 					<td class="column">
-						<h2 class="subheadline">Emerging Markets Investment Grade Yields</h2>
-						<br>
+						<h2 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h2>
+						
 						<!-- <img style src="@@imgBase/@@imgSrc" alt="Feature Image" width="404px"> -->
 						<img style src="https://placehold.co/404x272" alt="Feature Image" width="404px" height="272">
 						<p></p> <!-- Spacer <p> for MSO image margin -->
-						<br>
-						<p class="disclaimer">As of 26 October 2023</p>
+							
+						<p class="disclaimer margin-t-16">As of 26 October 2023</p>
 						<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
-						<p class="disclaimer">Source: Lazard, JP Morgan</p>
-						<br>
-						<p style="max-width: 390px;" class="paragraph-2">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
-						<br>
+						<p class="disclaimer margin-b-16">Source: Lazard, JP Morgan</p>
 						
-						<div class="mso_list">
+						<p style="max-width: 390px;" class="paragraph-2 margin-b-16">Rising US interest rates--and soaring Treasury yields--have done their part to rattle global economics. As the environment settles, we expect growth differentials to shift, creating a more positive backdrop for emerging markets debt and interesting investment opportunities for the asset class across the capital structure.</p>
+						
+						
+						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Emerging Markets</a></li>
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on Europe</a></li>
@@ -33,7 +33,7 @@
 									<li class="link-2"><a target="_blank" href="https://www.lazardassetmanagement.com">Outlook on the United Kingdom</a></li>
 							</ul>
 						</div>
-						<br>
+						
 						<!--
 							Component: Button
 							Variant: Pill, Primary, Large
