--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -570,7 +570,7 @@
 								<!-- <img style src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_1YGraph.png" alt="1Y Grades Chart" class="mw-100" /> -->
 								<img src="https://placehold.co/542x304" alt="Feature Image" width="542px" class="margin-b-16">
 								
-								<p class="disclaimer">As of 26 October 2023</p>
+								<p class="disclaimer margin-t-16">As of 26 October 2023</p>
 								<p class="disclaimer">Sovereign: JPM EMBI Global Diversified IG; Corporate: JPM CEMBI Broad Diversified IG</p>
 								<p class="disclaimer">Source: Lazard, JP Morgan</p>
 							</td>
