Removed module vertical padding, added two+ column padding

--- a/src/components/eyebrows/template.html
+++ b/src/components/eyebrows/template.html
@@ -1,1 +1,1 @@
-<p class="eyebrow"><span class="bullet">&bull;</span> <span class="label @@classes">@@label</span></p>
+<p class="eyebrow @@classes"><span class="bullet">&bull;</span> <span class="label">@@label</span></p>
