--- a/src/modules/two-column-contents/full-content/templates/template.dark.html
+++ b/src/modules/two-column-contents/full-content/templates/template.dark.html
@@ -21,11 +21,11 @@
 							classes: "margin-t-16 margin-b-16"
 						})
 						
-						<h4 class="margin-b-16">Do rising US Interest rates offer opportunities in EM?</h4>
+						<h4 class="sans margin-b-16">Do rising US Interest rates offer opportunities in EM?</h4>
 						
 						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
 						
-						<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
+						<p class="d-block paragraph-2 margin-b-16">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
 
 						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
@@ -88,11 +88,11 @@
 							classes: "margin-t-16 margin-b-16"
 						})
 						
-						<h4 class="margin-b-16">Do rising US Interest rates offer opportunities in EM?</h4>
+						<h4 class="sans margin-b-16">Do rising US Interest rates offer opportunities in EM?</h4>
 						
 						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
 						
-						<p style="width: 193px;" class="d-block paragraph-2 margin-b-16">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
+						<p class="d-block paragraph-2 margin-b-16">From airports and cellphone towers to electricity networks and railways, infrastructure makes businesses and economies run. By investing in the publicly listed equity of companies that operate infrastructure.</p>
 
 						<div class="mso_list margin-b-16">
 							<ul class="g_list" style="" align="left" type="disc">
