--- a/src/modules/two-column-contents/image-right/templates/template.dark.html
+++ b/src/modules/two-column-contents/image-right/templates/template.dark.html
@@ -8,8 +8,8 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
-					<td style class="column">
-						<h4 class="margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h4>
+					<td style class="column padded">
+						<h4 class="sans margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h4>
 						
 						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
 						
