--- a/src/modules/email-banner/two-column/templates/template.dark.html
+++ b/src/modules/email-banner/two-column/templates/template.dark.html
@@ -8,9 +8,9 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
-					<td style="margin-bottom: 16px;" class="column">
+					<td style="margin-bottom: 16px;" class="column padded">
 						<h1 class="sans margin-b-16">Factor Report</h1>
-						<p style="width: 180px;" class="margin-b-16">Monthly analysis of global market factors</p>
+						<p class="margin-b-16">Monthly analysis of global market factors</p>
 
 						@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 							label: "Download",
