--- a/src/modules/email-banner/two-column/templates/template.html
+++ b/src/modules/email-banner/two-column/templates/template.html
@@ -1,4 +1,4 @@
-<!--
+ <!--
 	Module: Email Banner, Two Column
 	Variant: @@variant, sapphire buttons
 -->
@@ -8,9 +8,9 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
-					<td style="" class="column margin-b-16">
+					<td style="" class="column padded margin-b-16">
 						<h1 class="sans margin-b-16">Factor Report</h1>
-						<p style="width: 180px;" class="margin-b-16">Monthly analysis of global market factors</p>
+						<p class="margin-b-16">Monthly analysis of global market factors</p>
 
 						@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 							label: "Download",
