--- a/src/modules/email-headings/templates/template.html
+++ b/src/modules/email-headings/templates/template.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<table style="" border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 				<tr>
-					<td class="column" width="100%">
+					<td class="column padded" width="100%">
 						@@heading
 						
 						@@paragraph
