--- a/src/modules/three-column-contents/large-thumbnail/templates/template.html
+++ b/src/modules/three-column-contents/large-thumbnail/templates/template.html
@@ -5,7 +5,7 @@
 <table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module @@variant">
 	<tr>
 		<td class="frame"></td>
-		<td class="content h-flush t-flush">
+		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 				<tr class="layout_four-column">
 					<td colspan="2" class="column">
