--- a/src/modules/thumbnail-grid/templates/template.onyx.html
+++ b/src/modules/thumbnail-grid/templates/template.onyx.html
@@ -14,7 +14,7 @@
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
 						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						
-						<h3 class="margin-b-16 margin-t-16">Emerging Markets</h3>
+						<h3 class="sans margin-b-16 margin-t-16">Emerging Markets</h3>
 						
 						<p class="caption margin-b-16">Senior Associate, US Offshore and Latin America Distribution</p>
 
@@ -28,7 +28,7 @@
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
 						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						
-						<h3 class="margin-b-16 margin-t-16">Emerging Markets</h3>
+						<h3 class="sans margin-b-16 margin-t-16">Emerging Markets</h3>
 						
 						<p class="caption margin-b-16">Senior Associate, US Offshore and Latin America Distribution</p>
 
@@ -37,12 +37,14 @@
 							width: "98px",
 							variant: "small"
 						})
+					</td>
+				</tr>
 				<tr class="layout_two-column">
 					<td style="" class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
 						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						
-						<h3 class="margin-b-16 margin-t-16">Emerging Markets</h3>
+						<h3 class="sans margin-b-16 margin-t-16">Emerging Markets</h3>
 						
 						<p class="caption margin-b-16">Senior Associate, US Offshore and Latin America Distribution</p>
 
@@ -51,10 +53,12 @@
 							width: "98px",
 							variant: "small"
 						})
+					</td>
+					<td>
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
 						<img src="https://placehold.co/264x142" alt="Feature image" width="264px" height="142px">
 						
-						<h3 class="margin-b-16 margin-t-16">Emerging Markets</h3>
+						<h3 class="sans margin-b-16 margin-t-16">Emerging Markets</h3>
 						
 						<p class="caption margin-b-16">Senior Associate, US Offshore and Latin America Distribution</p>
 
