--- a/src/modules/two-column-contents/image-left/templates/template.onyx.html
+++ b/src/modules/two-column-contents/image-left/templates/template.onyx.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
-					<td style class="column">
+					<td style class="column padded">
 						<h3 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h3>
 						
 						<!-- <img style src="@@imgBase/@@imgSrc" alt="Second Column Image" class=""> -->
@@ -19,7 +19,7 @@
 						<p class="disclaimer">Source: Lazard, JP Morgan</p>
 					</td>
 					<td style class="column">
-						<h4 class="margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h4>
+						<h4 class="sans margin-b-16">Do Rising US Interest Rates Offer Opportunities in EM?</h4>
 						
 						<h3 class="subheadline margin-b-16">Tuesday, October 31, 1:00PM eT</h3>
 						
