--- a/src/modules/two-column-contents/title-left/templates/template.dark.html
+++ b/src/modules/two-column-contents/title-left/templates/template.dark.html
@@ -8,8 +8,8 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_mobile-one-column">
-					<td style="width: 104px" class="column">
-						<h3 class="">Back on Track?</h3>
+					<td style="width: 88px" class="column padded">
+						<h3 class="sans">Back on Track?</h3>
 					</td>
 					<td class="column">
 						<h2 class="subheadline margin-b-16">Emerging Markets Investment Grade Yields</h2>
