--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -448,7 +448,7 @@
 					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module clarity">
 						<tr class="bordered">
 							<td class="frame"></td>
-							<td class="content v-flush">
+							<td class="content">
 								<table style width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 									<tr class="bordered">
 										<td class="table-thumbnail" align="right">
