--- a/src/templates/factor-report.html
+++ b/src/templates/factor-report.html
@@ -65,7 +65,7 @@
 					<table style border="0" cellpadding="0" cellspacing="0" role="presentation" class="module clarity">
 						<tr class="bordered">
 							<td class="frame"></td>
-							<td class="content t-flush">
+							<td class="content">
 								<table style width="100%" border="0" cellpadding="0" cellspacing="0" role="presentation" class="highlights-table">
 									<tr class="bordered">
 										<td class="table-thumbnail" align="right">
