Added Spacer component to master template

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -495,3 +495,57 @@
 		</table>
 	</td>
 </tr>
+
+<tr>
+	<td align="center" id="email-banner_one-column">
+		<h4 style="margin: 16px;">Spacers</h4>
+	</td>
+</tr>
+<!-- ---------- Email Banner One Column Modules ---------- -->
+<tr>
+	<td align="center">
+		@@include( "components/spacers/templates/template.html", {
+			variant: "parchment"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "components/spacers/templates/template.html", {
+			variant: "sage"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "components/spacers/templates/template.html", {
+			variant: "sapphire dark"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "components/spacers/templates/template.html", {
+			variant: "onyx dark"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "components/spacers/templates/template.html", {
+			variant: "currency dark"
+		} )
+	</td>
+</tr>
+
+<tr>
+	<td align="center">
+		@@include( "components/spacers/templates/template.html", {
+			variant: "ink dark"
+		} )
+	</td>
+</tr>
