--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -505,6 +505,10 @@ a {
 	vertical-align: middle;
 	margin-right: 6px;
 }
+
+.spacer {
+	height: 16px;
+}
 /* ---------- END Component Styles ---------- */
 
 /* ---------- Module Styles ---------- */
